--- a/pitch-for-good-front/css/index.css
+++ b/pitch-for-good-front/css/index.css
@@ -4,10 +4,10 @@
 	padding: 0;
 }
 
-html {
+/* html {
 	background: url("https://github.com/jessicawright/my-files/blob/master/landing.jpg?raw=true") no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-}
+} */
