--- a/pitch-for-good-front/css/index.css
+++ b/pitch-for-good-front/css/index.css
@@ -1,7 +1,16 @@
 * {
-	border-style: box-border;
-	margin: 0;
-	padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+a {
+text-decoration: none;
+}
+
+ul {
+  list-style: none;
+  padding: 1rem;
 }
 
 html {
@@ -10,4 +19,44 @@ html {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  font: 20px/1.618 Garamond, Cambria, sans-serif;
+  --primary-color: rgb(124, 204, 49);
+  --secondary-gray: rgb(74,75,64);
+  --tertiary-white: rgb(246, 248, 213);
+  text-align: center;
+}
+
+.volForm__container {
+  display: grid;
+	grid-gap: 5px 5px;
+	grid-template-columns: repeat(4, 1fr); 
+	grid-template-rows: repeat(4, 1fr); 
+	margin: 1rem;
+	padding: 1rem;
+	max-width: 1300px;	
+  height: flex;	
+  
+}
+
+.contact-info__container {
+  grid-column: 1 / span 4;
+  background: rgb(74,75,64,.9);
+  padding: 1rem;
+	
+}
+
+.skills__container {
+  grid-column: 1 / span 2;
+  grid-row: 2 / span 3;
+  background: rgb(74,75,64,.3);
+  padding: 1rem;
+	text-align: left;
+}
+
+.causes__container {
+  grid-column: 3 / span 2;
+  grid-row: 2 / span 3;
+  background: rgb(74,75,64,.7);
+  padding: 1rem;
+  text-align: left;
 }
