--- a/pitch-for-good-front/css/index.css
+++ b/pitch-for-good-front/css/index.css
@@ -14,16 +14,25 @@ ul {
 }
 
 html {
-	background: url("https://github.com/jessicawright/my-files/blob/master/landing.jpg?raw=true") no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+	background: url("https://github.com/jessicawright/my-files/blob/master/landing.jpg?raw=true") no-repeat center center/cover; 
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
   font: 20px/1.618 Garamond, Cambria, sans-serif;
-  --primary-color: rgb(124, 204, 49);
-  --secondary-gray: rgb(74,75,64);
+  --primary-color: rgb(127, 200, 59);
+  --secondary-gray: rgb(96, 117, 67);
   --tertiary-white: rgb(246, 248, 213);
   text-align: center;
+}
+
+body {
+  background-color: rgb(255, 255, 255, .8);
+  height: 100vh;
+  position: relative;
+
 }
 
 .volForm__container {
@@ -33,42 +42,108 @@ html {
 	grid-template-rows: repeat(3, 1fr); 
 	margin: 1rem;
 	padding: 1rem;
-	max-width: 1300px;	
+	max-width: 100%;	
   height: flex;	
   
+}
+.contact-info__container, .skills__container, .causes__container {
+  background: var(--secondary-gray);
+  color: var(--tertiary-white);
+  opacity: .85;
+  padding: 1rem;
+  border-radius: .35rem;
+  
+
 }
 
 .contact-info__container {
   grid-column: 1 / span 2;
-  background: rgb(74,75,64,.9);
-  padding: 1rem;
-	
+  
+  
+}
+
+input[type=text] {
+  width: 30%;
+  border: 2px solid rgb(0, 0, 0, 0.7);
+  border-radius: 4px;
+  margin: 8px 0;
+  outline: none;
+  padding: 8px;
+  box-sizing: border-box;
 }
 
 .skills__container {
   grid-column: 3 / span 2;
   grid-row: 1 / span 3;
-  background: rgb(74,75,64,.3);
-  padding: 1rem;
-	text-align: left;
+  text-align: left;
+  display: ;
+  
 }
 
 .causes__container {
   grid-column: 1 / span 2;
   grid-row: 2 / span 2;
-  background: rgb(74,75,64,.7);
-  padding: 1rem;
   text-align: left;
+  
 }
 
-button {
+.js-add-volunteer {
   grid-column: 2 / span 2;
   grid-row: 4 / span 2;
-  text-decoration: none;
-  background-color: rgb(0, 0, 0, 0.4);
-  font-size: 20px;
-  font: rgb(0, 0, 0, 0.8);
+  background-color: var(--secondary-gray);
+  color: var(--tertiary-white);
+  font-size: 30px;
   padding: 7px 24px;
   border-radius: 8px;
     
 }
+
+.js--sign-up__volunteer {
+  background-color: var(--secondary-gray);
+  color: var(--tertiary-white);
+  font-size: 30px;
+  padding: 1.5rem;
+  margin: 1rem;
+  border-radius: 8px;
+}
+
+h1 {
+  font-size: 60px;
+  color: var(--primary-color);
+}
+
+h2 {
+  font-size: 40px;
+  color: var(--secondary-gray);
+}
+
+h3 {
+  font-size: 25px;
+  color: var(--secondary-gray);
+}
+
+h4 {
+  font-size: 20px;
+  color: var(--secondary-gray);
+}
+
+h5 {
+  font-size: 15px;
+  color: var(--primary-color);
+}
+
+h6 {
+  font-size: 10px;
+  color: var(--primary-color);
+}
+
+/* start stlying check boxes */
+
+/* .skills {
+  width: flex;
+}
+.skills, .skill {
+  display:inline-block;
+  width:25%;
+} */
+
