--- a/pitch-for-good-front/css/index.css
+++ b/pitch-for-good-front/css/index.css
@@ -242,7 +242,7 @@ h6 {
 }
 
 .hero-image {
-  background-image: url('../images/hero.png');
+  background-image: url('../dist/images/hero.png');
   background-repeat: no-repeat;
   background-size: contain;
   position: absolute;
@@ -266,7 +266,11 @@ h6 {
 }
 
 .main-title {
-  font-size: 80px;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-style: italic;
+  font-weight: bold;
+  font-size: 60px;
+  color: #65cce5;
 }
 
 footer {
@@ -278,6 +282,29 @@ footer {
   margin-top: 20vh;
 }
 
-.logo {
-  background-image: url('../images/lotus.png');
+.nav-links {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  height: 20vh;
+}
+
+.title {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-style: italic;
+  font-weight: bold;
+  font-size: 60px;
+  color: #65cce5;
+
+}
+
+.logout {
+  background-color: white;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.welcome {
+  color: black;
+  margin-bottom: -10px;
 }
