--- a/pitch-for-good-front/css/index.css
+++ b/pitch-for-good-front/css/index.css
@@ -1,59 +1,3 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-a {
-text-decoration: none;
-}
-
-ul {
-  list-style: none;
-  padding: 1rem;
-  cursor: pointer;
-}
-
-li {
-  color: var(--tertiary-white)
-}
-
-html {
-  font: 20px/1.618 Arial;
-  --primary-color: rgb(127, 200, 59);
-  --secondary-color: rgb(102, 203, 229);
-  --secondary-gray: rgb(96, 117, 67);
-  --tertiary-white: rgb(246, 248, 213);
-  text-align: center;
-}
-
-body {
-  background-color: rgb(255, 255, 255, .8);
-  height: 100%;
-  position: relative;
-}
-
-/* button styling */
-.js--enter__volunteer, .js--enter__organization, .js--sign-up__volunteer, .js--sign-up__organization, .js--see-organizations, .js-vol-signin, .js-org-signin, .js--vol-add-causes, .js--see-organizations, .js--vol-add-skills, .js-get-project-form {
-  background-color: var(--secondary-gray);
-  color: var(--tertiary-white);
-  font-size: 30px;
-  padding: 1.5rem;
-  margin: 1rem;
-  border-radius: 8px;
-  box-shadow: 5px 5px 50px 15px rgb(96, 117, 67, .4);
-}
-
-/* text box styling */
-.add__jobTitle, .add__firstName, .add__lastName, .add__volUserName, .add__volPassword, .add__phoneNum, .add__email, .vol-password, .vol-username, .org-username, .org-password, .add__projectName, .add__estimatedDuration, .add__projectDescription {
-  width: 40%;
-  border: 2px solid rgb(0, 0, 0, 0.7);
-  border-radius: 4px;
-  margin: 8px 0;
-  outline: none;
-  padding: 10px;
-  box-sizing: border-box;
-}
 
 /*project form style */
 .projectForm__container {
@@ -85,7 +29,6 @@ body {
   opacity: .85;
   padding: 1rem;
   border-radius: .35rem;
-
 }
 
 .contact-info__container {
@@ -134,39 +77,6 @@ body {
   padding: 7px 24px;
   border-radius: 8px;
   box-shadow: 5px 5px 50px 15px var(--secondary-gray, .4);
-    
-}
-
-
-h1 {
-  font-size: 60px;
-  color: var(--primary-color);
-}
-
-h2 {
-  font-size: 40px;
-  color: var(--secondary-gray);
-}
-
-h3 {
-  font-size: 25px;
-  color: var(--secondary-gray);
-}
-
-h4 {
-  font-size: 20px;
-  color: var(--secondary-gray);
-}
-
-h5 {
-  font-size: 15px;
-  color: var(--primary-color);
-}
-
-h6 {
-  font-size: 30px;
-  color: var(--tertiary-white);
-  opacity: 1;
 }
 
 /* start org and vol Dashboard grid */
@@ -182,7 +92,7 @@ h6 {
   grid-column: 1 / span 4;
   grid-row: 1 / span 3;
   text-align: left;
-  display: flex;
+  display: inline-block;
 }
 .volDashboard__skills {
   grid-column: 1 / span 8;
@@ -204,20 +114,33 @@ h6 {
   grid-column: 5 / span 4;
   grid-row: 1 / span 3;
   text-align: left;
-  display: flex;
+  display: inline-block; 
 }
 
-/* add causes buttons */
-.js--vol-add-causes, .js--see-organizations, .js--vol-add-skills {
-  
+/* start orgForm grid */
+.orgForm__container {
+  display: grid;
+  grid-gap: 5px;
+  grid-template-columns: 4, 1fr;
+  grid-template-rows: 2, 1fr;
+}
+
+.contact-info__container {
+  grid-column: 1 / span 2;
+  grid-row: 1 / span 2; 
+}
+
+.skills__container {
+  grid-column: 3 / span 2;
+  grid-row: 1 / span 2; 
 }
 
 /* start org and vol landing grid */
 .orglanding__grid-container, .vollanding__grid-container {
-    display: grid;
-    grid-gap: 5px;
-    grid-template-columns: 4, 1fr;
-    grid-template-rows: 2, 1fr;
+  display: grid;
+  grid-gap: 5px;
+  grid-template-columns: 4, 1fr;
+  grid-template-rows: 2, 1fr;
 }
 
 .orglanding__signin, .vollanding__signin {
@@ -230,17 +153,21 @@ h6 {
   grid-row: 1 / span 2; 
 }
 
+.js--vol-add-causes, .js--vol-add-skills {
+  background-color: var(--secondary-color);
+  color: var(--secondary-gray);
+}
+
+/* start landing page style */
 .hero-image {
   background-image: url('../dist/images/hero.png');
   background-repeat: no-repeat;
   background-size: contain;
   position: absolute;
   top: 20vh;
-
 }
 
 .hero-header {
-  background-color: white;
   width: 100%;
   height: 20vh;
 }
@@ -252,8 +179,6 @@ h6 {
 
 .hero-intro {
   margin-top: 132vh;
-  
-
 }
 
 .main-title {
@@ -261,7 +186,7 @@ h6 {
   font-style: italic;
   font-weight: bold;
   font-size: 60px;
-  color: #65cce5;
+  color: var(--secondary-color);
 }
 
 footer {
@@ -271,33 +196,5 @@ footer {
 
 .hero-description {
   margin-top: 20vh;
-}
-
-.nav-links {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  height: 20vh;
-}
-
-
-.title {
-  font-family: Georgia, 'Times New Roman', Times, serif;
-  font-style: italic;
-  font-weight: bold;
-  font-size: 60px;
-  color: #65cce5;
-
-}
-
-.logout {
-  background-color: white;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.welcome {
-  color: black;
-  margin-bottom: -10px;
 }
 
