--- a/pitch-for-good-front/css/index.css
+++ b/pitch-for-good-front/css/index.css
@@ -34,7 +34,7 @@ body {
 }
 
 /* button styling */
-.js--enter__volunteer, .js--enter__organization, .js--sign-up__volunteer, .js--sign-up__organization, .js--see-organizations, .js-vol-signin, .js-org-signin, .js--vol-add-causes, .js--see-organizations, .js--vol-add-skills, .js-get-project-form {
+.js--see-organizations, .js--vol-add-causes, .js--see-organizations, .js--vol-add-skills, .js-get-project-form {
   background-color: var(--secondary-gray);
   color: var(--tertiary-white);
   font-size: 30px;
@@ -212,37 +212,16 @@ h6 {
   
 }
 
-/* start org and vol landing grid */
-.orglanding__grid-container, .vollanding__grid-container {
-    display: grid;
-    grid-gap: 5px;
-    grid-template-columns: 4, 1fr;
-    grid-template-rows: 2, 1fr;
-}
-
-.orglanding__signin, .vollanding__signin {
-  grid-column: 1 / span 2;
-  grid-row: 1 / span 2; 
-}
-
-.orglanding__signup, .vollanding__signup {
-  grid-column: 3 / span 2;
-  grid-row: 1 / span 2; 
-}
-
 .hero-image {
-  background-image: url('../dist/images/hero.png');
-  background-repeat: no-repeat;
-  background-size: contain;
-  position: absolute;
-  top: 20vh;
-
+  width: 100%;
+  align-self: center;
+  margin-top: 50px;
 }
 
 .hero-header {
   background-color: white;
   width: 100%;
-  height: 20vh;
+  height: 50px;
 }
 
 .container {
@@ -251,9 +230,9 @@ h6 {
 }
 
 .hero-intro {
-  margin-top: 132vh;
-  
-
+  margin-top: 50px;
+  margin-bottom: 50px;
+  font-style: italic;
 }
 
 .main-title {
@@ -270,7 +249,7 @@ footer {
 }
 
 .hero-description {
-  margin-top: 20vh;
+  margin-bottom: 50px;
 }
 
 .nav-links {
@@ -299,5 +278,101 @@ footer {
 .welcome {
   color: black;
   margin-bottom: -10px;
+}
+
+.landing-buttons {
+  margin-top: 50px;
+}
+
+.button__big {
+  background-color: var(--secondary-gray);
+  color: white;
+  font-size: 30px;
+  padding: 1.5rem;
+  margin: 1rem;
+  border-radius: 8px;
+}
+
+
+.landing-background {
+  background-image: url(../dist/images/signin.png);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100vw;
+  height: 100vh;
+  align-self: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.vollanding__grid-container {
+  display: flex;
+  flex-direction: row;
+}
+
+.orglanding__grid-container{
+  display: flex;
+  flex-direction: row;
+}
+
+.vollanding__signup {
+  margin-left: 40px;
+  margin-top: 30px;
+}
+
+.orglanding__signup {
+  margin-left: 40px;
+  margin-top: 30px;
+}
+
+.vollanding__signin {
+  margin-right: 40px;
+  margin-top: 30px;
+}
+
+.orglanding__signin {
+  margin-right: 40px;
+  margin-top: 30px;
+}
+
+
+
+.js-vol-signin {
+  background-color: var(--secondary-gray);
+  color: white;
+  font-size: 20px;
+  padding: 10px 20px;
+  margin: 1rem;
+  border-radius: 8px;
+}
+
+.js-org-signin {
+  background-color: var(--secondary-gray);
+  color: white;
+  font-size: 20px;
+  padding: 10px 20px;
+  margin: 1rem;
+  border-radius: 8px;
+}
+
+.js--sign-up__volunteer {
+  background-color: var(--secondary-gray);
+  color: white;
+  font-size: 20px;
+  padding: 10px 20px;
+  margin: 1rem;
+  border-radius: 8px;
+}
+
+.js--sign-up__organization {
+  background-color: var(--secondary-gray);
+  color: white;
+  font-size: 20px;
+  padding: 10px 20px;
+  margin: 1rem;
+  border-radius: 8px;
 }
 
