--- a/pitch-for-good-front/css/index.css
+++ b/pitch-for-good-front/css/index.css
@@ -187,6 +187,7 @@ footer {
   margin-bottom: 50px;
 }
 
+/* start volunteer and org landing pages */
 .landing-buttons {
   margin-top: 50px;
 }
@@ -244,8 +245,6 @@ footer {
   margin-top: 30px;
 }
 
-
-
 .js-vol-signin {
   background-color: var(--secondary-gray);
   color: white;
@@ -282,6 +281,7 @@ footer {
   border-radius: 8px;
 }
 
+/* start volunteer search page styling */
 .skill-select {
   display: inline-block;
 	font-size: 16px;
