--- a/pitch-for-good-front/css/index.css
+++ b/pitch-for-good-front/css/index.css
@@ -310,14 +310,15 @@ footer {
 
 .vol-search-info {
   margin-bottom: 20px;
-  color: var(--secondary-color);
+  margin-top: 40px;
+  color: white;
 }
 
 .vol-search {
   margin-top: 25vh;
   margin: auto;
-  background-image: url(../dist/images//mural.png);
-  background-position: center center;
+  background-image: url(../dist/images/gardenvolunteers.png);
+  background-position: center -15px;
   background-repeat: no-repeat;
   background-size: cover;
   width: 100vw;
@@ -325,10 +326,12 @@ footer {
   align-self: center;
   align-items: center;
   text-align: center;
+  position: absolute;
+  top: 0;
 }
 
 .js-find-volunteers-by-skill {
-  background-color: var(--secondary-gray);
+  background-color: var(--secondary-color);
   color: white;
   font-size: 15px;
   padding: 10px 20px;
@@ -338,7 +341,50 @@ footer {
 
 .vol-search-info-detail {
   font-style: italic;
-  color: var(--secondary-color);
+  color: white;
+}
+
+.vol-search span {
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+}
+
+i {
+  margin-top: 10px;
+  margin-left: 10px;
+}
+
+/* start vol search results page */
+.js-search-again {
+  background-color: var(--secondary-color);
+  color: white;
+  font-size: 15px;
+  padding: 10px 20px;
+  margin: 1rem;
+  border-radius: 8px;
+}
+
+.js-back-to-org-dashboard {
+  background-color: var(--secondary-color);
+  color: white;
+  font-size: 15px;
+  padding: 10px 20px;
+  margin: 1rem;
+  border-radius: 8px;
+}
+
+.volunteer {
+  color: white;
+}
+
+.volunteer__email {
+  color: white;
+}
+
+.volunteer-results {
+  display: flex;
+  flex-direction: row;
 }
 
 
