--- a/pitch-for-good-front/css/index.css
+++ b/pitch-for-good-front/css/index.css
@@ -356,13 +356,21 @@ i {
 .vol-dashboard-container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(2, 1fr);
+  grid-template-rows: repeat(2, auto);
   grid-gap: 30px;
   margin: 0 40px 0 40px;
 }
 
-.vol-dashboard-container h6 {
-  font-size: 20px;
+.vol-dashboard-background {
+  margin-top: 25vh;
+  margin: auto;
+  background-image: url(../dist/images/dashboardbackground.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-width: 100vw;
+  min-height: 100vh;
+  align-self: center;
 }
 
 .container1 {
@@ -372,122 +380,6 @@ i {
   border-radius: 8px;
 }
 
-.container-body-left {
-  text-align: left;
-  color: var(--secondary-gray);
-}
-
-.container1-header {
-  background-color: #444;
-  border-top-left-radius: 8px;
-  border-top-right-radius: 8px;
-  color: var(--tertiary-white);
-  background-image: url(../dist/images/container1.png);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center 10%;
-  min-height: 175px;
-}
-
-.container1-header h6 {
-  padding-top: 15px;
-  padding-bottom: 5px;
-  color: var(--tertiary-white);
-  font-weight: bold;
-
-}
-
-.container2 ul li {
-  text-align: left;
-}
-
-.container2-header {
-  background-color: #444;
-  border-top-left-radius: 8px;
-  border-top-right-radius: 8px;
-  color: var(--tertiary-white);
-  background-image: url(../dist/images/container2.png);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center 10%;
-  min-height: 175px;
-}
-
-.container2-header h6 {
-  padding-top: 15px;
-  padding-bottom: 5px;
-  color: var(--tertiary-white);
-  font-weight: bold;
-}
-
-.container3-header {
-  background-color: #444;
-  border-top-left-radius: 8px;
-  border-top-right-radius: 8px;
-  color: var(--tertiary-white);
-  background-image: url(../dist/images/container3.png);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: -30% center;
-  min-height: 175px;
-}
-
-.container3 ul li {
-  text-align: left;
-}
-
-.container3-header h6 {
-  padding-top: 15px;
-  padding-bottom: 5px;
-  color: var(--tertiary-white);
-  font-weight: bold;
-}
-
-.container4-header {
-  background-color: #444;
-  border-top-left-radius: 8px;
-  border-top-right-radius: 8px;
-  color: var(--tertiary-white);
-  background-image: url(../dist/images/container4.png);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  min-height: 175px;
-}
-
-.container4-header h6 {
-  padding-top: 15px;
-  padding-bottom: 5px;
-  color: var(--tertiary-white);
-  font-weight: bold;
-}
-
-.pitch-instructions {
-  color: var(--secondary-gray);
-  padding: 15px;
-  padding-top: 30px;
-}
-
-
-.container5-header {
-  background-color: #444;
-  border-top-left-radius: 8px;
-  border-top-right-radius: 8px;
-  color: var(--tertiary-white);
-  background-image: url(../dist/images/container5.png);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center 20%;
-  min-height: 175px;
-}
-
-.container5-header h6 {
-  padding-top: 15px;
-  padding-bottom: 5px;
-  color: var(--tertiary-white);
-  font-weight: bold;
-}
-
 .container2 {
   grid-column-start: 2/span 1;
   grid-row-start: 1;
@@ -495,11 +387,19 @@ i {
   border-radius: 8px;
 }
 
+.container2 ul li {
+  color: #555555;
+}
+
 .container3 {
   grid-column-start: 3/span 1;
   grid-row-start: 1;
   background-color: white;
   border-radius: 8px;
+}
+
+.container3 ul li {
+  color: #555555;
 }
 
 .container4 {
@@ -517,18 +417,18 @@ i {
   border-radius: 8px;
 }
 
-.vol-dashboard-background {
-  margin-top: 25vh;
-  margin: auto;
-  background-image: url(../dist/images/dashboardbackground.png);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  min-width: 100vw;
-  min-height: 100vh;
-  align-self: center;
-  /* position: absolute;
-  top: 0;  */
+.container-header {
+  background-color: rgb(96, 117, 67, 0.5);
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+  color: var(--tertiary-white);
+}
+
+.container-header h6 {
+  padding-top: 15px;
+  padding-bottom: 5px;
+  color: var(--tertiary-white);
+  font-weight: bold;
 }
 
 .container-border {
@@ -538,9 +438,36 @@ i {
   border-width: 2px;
 }
 
+.vol-dashboard-container h6 {
+  font-size: 18px;
+}
+
+.container-body-left {
+  color: #555555;
+  padding: 20px 40px 0 40px;
+}
+
+.container-body-left ul li{
+  text-align: left;
+  color: #555555;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.pitch-instructions {
+  color: #555555;
+  padding: 15px;
+  padding-top: 30px;
+}
+
+#gray-text {
+  color: #555555;
+}
+
+/* vol dashboard buttons */
 .js--vol-add-causes, .js--vol-add-skills {
-  background-color: var(--tertiary-white);
-  color: var(--secondary-gray);
+  background-color: var(--secondary-color);
+  color: #555555;
   font-size: 15px;
   padding: 10px;;
   margin: 10px;
@@ -550,8 +477,8 @@ i {
 }
 
 .js--see-organizations {
-  background-color: var(--tertiary-white);
-  color: var(--secondary-gray);
+  background-color: var(--secondary-color);
+  color: #555555;
   font-size: 15px;
   padding: 10px;;
   margin: 10px;
@@ -559,21 +486,11 @@ i {
   font-size: 20px;
 }
 
-.container-body-left ul {
-  padding: 40px;
-}
-
-.container-body-left ul li {
-  color: var(--secondary-gray);
-  font-size: 20px;
-  font-weight: bold;
-}
-
 /* start addSkills.js styling*/
 .addSkills__background {
   margin-top: 25vh;
   margin: auto;
-  background-image: url(../dist/images//carpenter-hands.png);
+  background-image: url(../dist/images/carpenter-hands.png);
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -646,8 +563,8 @@ i {
 /* start org dashboard */
 .org-dashboard-container {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(3, auto);
   grid-gap: 30px;
   margin: 0 40px 0 40px;
 }
@@ -655,7 +572,7 @@ i {
 .org-dashboard-background {
   margin-top: 25vh;
   margin: auto;
-  /* backgrounpmnd-image: url(../dist/images/dashboardbackground.png); */
+  background-image: url(../dist/images/dashboardbackground.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -666,73 +583,104 @@ i {
 
 .org-container1 {
   grid-column-start: 1;
-  grid-column-end: 3;
-  background-color: white;
-  border-radius: 8px;
-}
-
-.org-container2 {
-  grid-column-start: 3;
   grid-column-end: -1;
   background-color: white;
   border-radius: 8px;
 }
 
-.org-container3 {
-  grid-column-start: 1 /span 1;
+.org-container2 {
+  grid-column-start: 1;
+  grid-column-end: 1;
   background-color: white;
   border-radius: 8px;
 }
 
-.org-container4 {
+.org-container3 {
   grid-column-start: 2;
   grid-column-end: -1;
   background-color: white;
   border-radius: 8px;
 }
 
-.org-container1-header {
+.org-container4 {
+  grid-column-start: 1;
+  grid-column-end: -1;
+  background-color: white;
+  border-radius: 8px;
+}
+
+.org-container-header {
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
-  color: var(--tertiary-white);
-  background-image: url(../dist/images/container1.png);
+  color: var(--secondary-gray);
+  background-color: var(--secondary-gray);
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center 10%;
+  background-position: center;
   min-height: 175px;
 }
 
-.org-container2-header {
-  border-top-left-radius: 8px;
-  border-top-right-radius: 8px;
-  color: var(--tertiary-white);
-  background-image: url(../dist/images/container2.png);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center 10%;
-  min-height: 175px;
+
+.org-container1-header h6 {
+  padding-top: 15px;
+  padding-bottom: 5px;
+  color: var(--secondary-gray);
+  font-weight: bold;
+
 }
 
-.org-container3-header {
-  border-top-left-radius: 8px;
-  border-top-right-radius: 8px;
-  color: var(--tertiary-white);
-  background-image: url(../dist/images/container3.png);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center 10%;
-  min-height: 175px;
+.org-dashboard-container h6 {
+  font-size: 20px;
 }
 
-.org-container4-header {
-  border-top-left-radius: 8px;
-  border-top-right-radius: 8px;
-  color: var(--tertiary-white);
-  background-image: url(../dist/images/container4.png);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center 10%;
-  min-height: 175px;
+.org-container2-header h6 {
+  padding-top: 15px;
+  padding-bottom: 5px;
+  color: var(--secondary-gray);
+  font-weight: bold;
 }
+
+.org-container3-header h6 {
+  padding-top: 15px;
+  padding-bottom: 5px;
+  color: var(--secondary-gray);
+  font-weight: bold;
+}
+
+.org-container4-header h6 {
+  padding-top: 15px;
+  padding-bottom: 5px;
+  color: var(--secondary-gray);
+  font-weight: bold;
+}
+
+.org-container4 ul li {
+  text-align: left;
+}
+
+.org-container-border {
+  border-style: solid;
+  border-color: var(--secondary-gray);
+  border-radius: 12px;
+  border-width: 2px;
+}
+
+.js-get-volunteer-search {
+  background-color: var(--secondary-gray);
+  color: var(--tertiary-white);
+  justify-content: space-evenly;
+  font-size: 20px;
+  padding: 10px;
+}
+
+.js-accept-project {
+  background-color: var(--secondary-gray);
+  color: var(--tertiary-white);
+  justify-content: space-evenly;
+  font-size: 16px;
+  padding: 5px;
+  margin-bottom: 20px;
+}
+
 
 
