--- a/pitch-for-good-front/css/index.css
+++ b/pitch-for-good-front/css/index.css
@@ -569,7 +569,7 @@ i {
   font-weight: bold;
 }
 
-/* start addSkills.js styling*/
+/* start addSkills.js and addCauses.js styling*/
 .addSkills__background {
   margin-top: 25vh;
   margin: auto;
@@ -590,21 +590,9 @@ i {
   justify-content: center;
 }
 .skills__container {
-
   background-color: none;
-
   height: 500px;
-  /* width:40%; */
-
-  /* align-self: center; */
-
-
-  /* margin-left: 250px; */
   margin:auto;
-
-
-
-
 }
 .skills__container__list {
   display: grid;
@@ -632,13 +620,46 @@ i {
   padding: 10px;
 
 }
-.addSkills_profile {
+.addSkills_headline, .addCauses__headline {
   margin-top: 75px;
-
   color: white;
 }
-.skill-buttons {
+.skill-buttons, .cause__buttons {
   display: flex;
   flex-direction: row;
   justify-content: center;
+}
+.addCauses__background {
+  margin-top: 25vh;
+  margin: auto;
+  background-image: url(../dist/images//carpenter-hands.png);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100vw;
+  min-height: 100vh;
+  align-self: center;
+  align-items: center;
+  text-align: center;
+}
+.addCauses__background {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.causes__container {
+  background-color: none;
+  height: 500px;
+  margin:auto;
+}
+.causeNameList {
+  font-size: 24px;
+}
+.cause__container__list {
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  grid-template-rows: repeat(2,1fr);
+  grid-column-gap: 50px;
+
 }
