--- a/pitch-for-good-front/css/index.css
+++ b/pitch-for-good-front/css/index.css
@@ -47,7 +47,6 @@
 .hero-image {
   width: 100%;
   align-self: center;
-  margin-top: 50px;
 }
 
 .hero-header {
@@ -81,6 +80,7 @@ footer {
 
 .hero-description {
   margin-bottom: 50px;
+  color: var(--secondary-gray);
 }
 
 /* start volunteer and org landing pages */
@@ -123,22 +123,22 @@ footer {
 
 .vollanding__signup {
   margin-left: 40px;
-  margin-top: 30px;
+  /* margin-top: 30px; */
 }
 
 .orglanding__signup {
   margin-left: 40px;
-  margin-top: 30px;
+  /* margin-top: 30px; */
 }
 
 .vollanding__signin {
   margin-right: 40px;
-  margin-top: 30px;
+  /* margin-top: 30px; */
 }
 
 .orglanding__signin {
   margin-right: 40px;
-  margin-top: 30px;
+  /* margin-top: 30px; */
 }
 
 .js-vol-signin {
@@ -226,6 +226,11 @@ footer {
   top: 0;
 }
 
+.vol-search span i {
+  margin-top: 10px;
+  margin-left: 10px;
+}
+
 .js-find-volunteers-by-skill {
   background-color: var(--secondary-color);
   color: white;
@@ -298,7 +303,9 @@ i {
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, auto);
   grid-gap: 30px;
-  margin: 0 40px 0 40px;
+  margin-left: 40px;
+  margin-right: 40px;
+  padding-top: 30px;
 }
 
 .vol-dashboard-background {
@@ -307,7 +314,7 @@ i {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  min-width: 100vw;
+  min-width: 100%;
   height: 100%;
   align-self: center;
 }
@@ -481,13 +488,14 @@ header span i {
   align-items: center;
   text-align: center;
 }
-.addSkills__background {
+
+.addSkills-arrow {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  flex-direction: row;
+  justify-content: left;
 }
-.skills__container {
+
+/* .skills__container {
 
   background-color: none;
 
@@ -498,19 +506,19 @@ header span i {
 
 
   /* margin-left: 250px; */
-  margin:auto;
+  /* margin:auto; */
 
 
 
 
-}
+/* }
 .skills__container__list {
   display: grid;
-  grid-template-columns: repeat(2,1fr);
-  grid-template-rows: repeat(2,1fr);
+  grid-template-columns: repeat(3,1fr);
+  grid-template-rows: auto;
   grid-column-gap: 50px;
 
-}
+} */
 .addSkill__button {
   grid-column: 1/ span 1;
   grid-row: 3/ span 1;
@@ -531,8 +539,7 @@ header span i {
 
 }
 .addSkills_profile {
-  margin-top: 75px;
-
+  margin-top: 40px;
   color: white;
 }
 .skill-buttons {
@@ -547,17 +554,19 @@ header span i {
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(3, auto);
   grid-gap: 30px;
-  margin: 0 40px 40px 40px;
+  margin-left: 40px;
+  margin-right: 40px;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 .org-dashboard-background {
-  /* margin-top: 25vh; */
   margin: auto;
   background-image: url(../dist/images/dashboardbackground.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  min-width: 100vw;
+  min-width: 100%;
   height: 100%;
   align-self: center;
 }
