--- a/pitch-for-good-front/css/index.css
+++ b/pitch-for-good-front/css/index.css
@@ -572,11 +572,19 @@ header span i {
   margin-top: 10px;
   color: white;
 }
-.skill-buttons, .cause__buttons {
+.skill-buttons {
   display: flex;
   flex-direction: row;
   justify-content: center;
 }
+
+.cause__buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
 .addCauses__background {
   margin-top: 25vh;
   margin: auto;
@@ -596,6 +604,15 @@ header span i {
   align-items: center;
   justify-content: center;
 }
+
+.addCauses-arrow {
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+  margin-left: 15px;
+  margin-top: 15px;
+}
+
 .causes__container {
   background-color: none;
   height: 775px;
@@ -606,6 +623,7 @@ header span i {
   font-size: 30px;
   margin-bottom: 5px;
 }
+
 .cause__description {
   font-size: 20px;
 }
@@ -615,9 +633,8 @@ header span i {
   grid-template-columns: repeat(1,1fr);
   grid-template-rows: repeat(2,1fr);
   grid-column-gap: 50px;
-
+  text-align: left;
 }
-
 
 /* start org dashboard */
 .org-dashboard-container {
@@ -932,7 +949,14 @@ header span i {
 
 .organizations__container {
   background-image: url(../dist/dashboardbackground.97591da5.png);
-  padding-top: 1rem;
+}
+
+.volunteer__org-search__header {
+  display: flex;
+  justify-content: center;
+  float: left;
+  margin-left: 15px;
+  margin-top: 15px;
 }
 
 .organization-page__title {
