--- a/pitch-for-good-front/css/index.css
+++ b/pitch-for-good-front/css/index.css
@@ -26,7 +26,6 @@
 
   background-color: var(--secondary-gray);
   color: var(--tertiary-white);
-  opacity: .85;
   padding: 1rem;
   border-radius: .35rem;
 }
@@ -279,12 +278,12 @@ i {
 }
 
 .js-back-to-org-dashboard {
-  background-color: var(--secondary-color);
+  /* background-color: var(--secondary-color); */
   color: white;
   font-size: 15px;
   padding: 10px 20px;
   margin: 1rem;
-  border-radius: 8px;
+  /* border-radius: 8px; */
 }
 
 .volunteer {
@@ -972,7 +971,7 @@ a {
   display: flex;
   flex-direction: column;
   background-color: white;
-  margin: 5rem;
+  margin: 2rem;
   border-radius: 8px;
   border-style: solid;
   border-color: rgb(127, 200, 59);
